alt text for images

--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-<html lang="en-us">
-
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <title>Horiseon</title>
-    </head>
+    <html lang="en-us">
+        <head>
+            <meta charset="UTF-8" />
+            <link rel="stylesheet" href="./assets/css/style.css">
+            <title>Horiseon - Home Page</title>
+        </head>
 
     <body>
-    <!-- Header Section -->
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+    <!-- Navigation -->
+        <header>
+            <h1>Hori<span class="seo">seo</span>n</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div class="hero"></div>
 
     <!-- Search Engine Optimization -->
-    <div class="hero"></div>
-    <div class="content">
+        
+    <section class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="workstation with writing utensils, coffee, laptop and notebook with SEO notes" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -38,7 +38,7 @@
         </div>
        
     <!-- Online Reputation Management -->
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div id="online-reputation-management" alt="over shoulder view of person on laptop with a screen that shows a graph and the word reputation in big letters" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -47,7 +47,7 @@
         </div>
 
     <!-- Social Media Marketing-->
-        <div id="social-media-marketing" class="social-media-marketing">
+        <div id="social-media-marketing" alt="cluttered work station surrounded by six to eight individuals with social media stickers" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
