--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-    <!-- navigation -->
+    <!-- navigation/header -->
         <header>
             <h1>Hori<span class="seo">seo</span>n</h1>
             <nav>
@@ -27,36 +27,37 @@
         </header>
     
     <!-- hero/jumbotron image -->        
-        <div class="hero"></div>
+    <div class="hero"></div>
 
-    <!-- search engine optimization section-->
-    <section class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="workstation with writing utensils, coffee, laptop and notebook with SEO notes" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
+    <!-- service benefits: search engine optimization section-->
+    <main>
+        <section class="content">
+            <div class="search-engine-optimization">
+                <img src="./assets/images/search-engine-optimization.jpg" alt="workstation with writing utensils, coffee, laptop and notebook with SEO notes" class="float-left" />
+                <h2>Search Engine Optimization</h2>
+                <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
+                </p>
+            </div>
        
-    <!-- online reputation management section -->
-        <div id="online-reputation-management" alt="over shoulder view of person on laptop with a screen that shows a graph and the word reputation in big letters" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+    <!-- service benefits: online reputation management section -->
+        <div id="online-reputation-management"  class="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="over shoulder view of person on laptop with a screen that shows a graph and the word reputation in big letters" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
 
-    <!-- social media marketing section-->
-        <div id="social-media-marketing" alt="cluttered work station surrounded by six to eight individuals with social media stickers" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+    <!-- service benefits: social media marketing section-->
+        <div id="social-media-marketing"  class="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="cluttered work station surrounded by six to eight individuals with social media stickers" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </main>
 
     <!-- service benefits section -->
     <div class="benefits">
