--- a/index.html
+++ b/index.html
@@ -31,32 +31,31 @@
 
     <!-- service benefits: search engine optimization section-->
     <main>
-        <section class="content">
-            <div class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" alt="workstation with writing utensils, coffee, laptop and notebook with SEO notes" class="float-left" />
-                <h2>Search Engine Optimization</h2>
-                <p>
+        <section id="search-engine-optimization" class="service">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="workstation with writing utensils, coffee, laptop and notebook with SEO notes" class="float-left" />
+            <h2>Search Engine Optimization</h2>
+            <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-                </p>
-            </div>
+            </p>
+        </section>
        
     <!-- service benefits: online reputation management section -->
-        <div id="online-reputation-management"  class="online-reputation-management">
+        <section id="online-reputation-management"  class="service">
             <img src="./assets/images/online-reputation-management.jpg" alt="over shoulder view of person on laptop with a screen that shows a graph and the word reputation in big letters" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
+        </section>
 
     <!-- service benefits: social media marketing section-->
-        <div id="social-media-marketing"  class="social-media-marketing">
+        <section id="social-media-marketing"  class="service">
             <img src="./assets/images/social-media-marketing.jpg" alt="cluttered work station surrounded by six to eight individuals with social media stickers" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
+        </section>
     </main>
 
     <!-- service benefits section -->
