--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
     </aside>
     
     <!-- footer section -->
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
     </body>
 
 </html>
